feat: add secondary color variable and remove description truncation in admin view

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -16,6 +16,7 @@
 	--color-primary-light: #34E89E;
 	--color-primary-dark: #00C26D;
 	--color-primary-hover: #00B86A;
+	--color-secondary: #4ECDC4;
 
 	/* Category Colors */
 	--color-category-bg: #D1FAE5;
