feat: add ranking feature with global leaderboard and hangman game implementation

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,8 @@
 @import './games.css';
 @import './gameFormModal.css';
 @import './themeSelection.css';
+@import './hangman.css';
+@import './ranking.css';
 
 /* 16. Responsive - Load last to override as needed */
 @import './responsive.css';
